setup-scripts/99-demoapp/demoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
  replicas: 1
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: demoapp
        image: "gcr.io/google-samples/hello-app:2.0"
